update doc system

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -20,6 +20,8 @@ jobs:
           python -m pip install -U sphinx
       - name: Build and Commit
         uses: sphinx-notes/pages@v2
+        with:
+          documentation_path: ./docs/source
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
